Add new player entries and update tempId generation logic in tournament and match input helper files
- Added new player "悠 伊関" to match-input-helper2.html.
- Updated tempId generation logic in match-input-helper2.html to ensure consistency.
- Modified player entries in tournament.html to include new pairs and maintain structure.
- Ensured all player entries have unique identifiers and proper team associations.

--- a/tools/match-input-helper2.html
+++ b/tools/match-input-helper2.html
@@ -144,7 +144,8 @@
                     "momota-tetsuma": { firstName: "鉄馬", lastName: "百田", team: "日本体育大学" },
                     "murata-chiharu": { firstName: "千春", lastName: "村田", team: "日本体育大学" },
                     "naito-rento": { firstName: "蓮斗", lastName: "内藤", team: "日本体育大学" },
-                    "kenjo-kawamoto": { firstName: "健士郎", lastName: "川本", team: "日本体育大学" }
+                    "kenjo-kawamoto": { firstName: "健士郎", lastName: "川本", team: "日本体育大学" },
+                    "iseki-yu": { firstName: "悠", lastName: "伊関", team: "日本体育大学" },
                 }
             };
 
@@ -320,7 +321,7 @@
                     representativeTeam = [...teamSet][0];
                     for (const player of players) {
                         player.team = player.team || representativeTeam;
-                        player.tempId = player.playerId || player.firstName + "_" +  player.lastName + "_" + representativeTeam;
+                        player.tempId = player.firstName + "_" +  player.lastName + "_" + representativeTeam;
                     }
                 } else if (teamSet.size === 0) {
                     representativeTeam = '';
