--- a/tools/tournament.html
+++ b/tools/tournament.html
@@ -124,45 +124,45 @@
 
     // プレイヤー情報（ペア名 + 各プレイヤーID）
     const initialPlayers =
-      [
-        { "id": 1, "name": "片岡・黒坂（日本体育大学）", "information": [{ "lastName": "片岡", "firstName": "暁紀", "team": "日本体育大学", "playerId": "kataoka-aki", "tempId": "kataoka-aki" }, { "lastName": "黒坂", "firstName": "卓矢", "team": "日本体育大学", "playerId": "kurosaka-takuya", "tempId": "kurosaka-takuya" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 2, "name": "青木・キング（立教大学）", "information": [{ "lastName": "青木", "firstName": "颯汰", "team": "立教大学", "playerId": null, "tempId": "颯汰_青木_立教大学" }, { "lastName": "キング", "firstName": "ルイス", "team": "立教大学", "playerId": null, "tempId": "ルイス_キング_立教大学" }] },
-        { "id": 3, "name": "熊木・上田（法政大学）", "information": [{ "lastName": "熊木", "firstName": "暖", "team": "法政大学", "playerId": null, "tempId": "暖_熊木_法政大学" }, { "lastName": "上田", "firstName": "唯仁", "team": "法政大学", "playerId": null, "tempId": "唯仁_上田_法政大学" }] },
-        { "id": 4, "name": "高野・高梨（東海大学）", "information": [{ "lastName": "高野", "firstName": "伊織", "team": "東海大学", "playerId": null, "tempId": "伊織_高野_東海大学" }, { "lastName": "高梨", "firstName": "佑紀人", "team": "東海大学", "playerId": null, "tempId": "佑紀人_高梨_東海大学" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 5, "name": "火山・吉野（帝京大学）", "information": [{ "lastName": "火山", "firstName": "優希", "team": "帝京大学", "playerId": null, "tempId": "優希_火山_帝京大学" }, { "lastName": "吉野", "firstName": "碧", "team": "帝京大学", "playerId": null, "tempId": "碧_吉野_帝京大学" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 6, "name": "宮本・深井（城西大学）", "information": [{ "lastName": "宮本", "firstName": "涼平", "team": "城西大学", "playerId": null, "tempId": "涼平_宮本_城西大学" }, { "lastName": "深井", "firstName": "葉太郎", "team": "城西大学", "playerId": null, "tempId": "葉太郎_深井_城西大学" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 7, "name": "古賀・町田（東洋大学）", "information": [{ "lastName": "古賀", "firstName": "太平", "team": "東洋大学", "playerId": null, "tempId": "太平_古賀_東洋大学" }, { "lastName": "町田", "firstName": "開", "team": "東洋大学", "playerId": null, "tempId": "開_町田_東洋大学" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 8, "name": "諸橋・玉木（白鴎大学）", "information": [{ "lastName": "諸橋", "firstName": "巧翔", "team": "白鴎大学", "playerId": null, "tempId": "巧翔_諸橋_白鴎大学" }, { "lastName": "玉木", "firstName": "歩", "team": "白鴎大学", "playerId": null, "tempId": "歩_玉木_白鴎大学" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 9, "name": "前岡・榊原（駿河台大学）", "information": [{ "lastName": "前岡", "firstName": "和亜", "team": "駿河台大学", "playerId": null, "tempId": "和亜_前岡_駿河台大学" }, { "lastName": "榊原", "firstName": "志門", "team": "駿河台大学", "playerId": null, "tempId": "志門_榊原_駿河台大学" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 10, "name": "梶山・長谷川（國學院大學）", "information": [{ "lastName": "梶山", "firstName": "成", "team": "國學院大學", "playerId": null, "tempId": "成_梶山_國學院大學" }, { "lastName": "長谷川", "firstName": "大輝", "team": "國學院大學", "playerId": null, "tempId": "大輝_長谷川_國學院大學" }] },
-        { "id": 11, "name": "岡田・伊藤（大東文化大学）", "information": [{ "lastName": "岡田", "firstName": "侑披", "team": "大東文化大学", "playerId": null, "tempId": "侑披_岡田_大東文化大学" }, { "lastName": "伊藤", "firstName": "秀也", "team": "大東文化大学", "playerId": null, "tempId": "秀也_伊藤_大東文化大学" }] },
-        { "id": 12, "name": "灰佐・後藤（慶應義塾大学）", "information": [{ "lastName": "灰佐", "firstName": "賢人", "team": "慶應義塾大学", "playerId": null, "tempId": "賢人_灰佐_慶應義塾大学" }, { "lastName": "後藤", "firstName": "煌", "team": "慶應義塾大学", "playerId": null, "tempId": "煌_後藤_慶應義塾大学" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 13, "name": "須澤・茶木（日本体育大学）", "information": [{ "lastName": "須澤", "firstName": "心晴", "team": "日本体育大学", "playerId": "suzawa-koharu", "tempId": "suzawa-koharu" }, { "lastName": "茶木", "firstName": "將巨", "team": "日本体育大学", "playerId": "chaki-masataka", "tempId": "chaki-masataka" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 14, "name": "松村・市村（東海大学）", "information": [{ "lastName": "松村", "firstName": "遼太郎", "team": "東海大学", "playerId": null, "tempId": "遼太郎_松村_東海大学" }, { "lastName": "市村", "firstName": "大地", "team": "東海大学", "playerId": null, "tempId": "大地_市村_東海大学" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 15, "name": "千葉・小野（東京経済大学）", "information": [{ "lastName": "千葉", "firstName": "琉翔", "team": "東京経済大学", "playerId": null, "tempId": "琉翔_千葉_東京経済大学" }, { "lastName": "小野", "firstName": "武蔵", "team": "東京経済大学", "playerId": null, "tempId": "武蔵_小野_東京経済大学" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] },
-        { "id": 16, "name": "相澤・宮脇（順天堂大学）", "information": [{ "lastName": "相澤", "firstName": "明喜", "team": "順天堂大学", "playerId": null, "tempId": "明喜_相澤_順天堂大学" }, { "lastName": "宮脇", "firstName": "光由", "team": "順天堂大学", "playerId": null, "tempId": "光由_宮脇_順天堂大学" }] },
-        { "id": 17, "name": "行方・坂入（千葉商科大学）", "information": [{ "lastName": "行方", "firstName": "聖流", "team": "千葉商科大学", "playerId": null, "tempId": "聖流_行方_千葉商科大学" }, { "lastName": "坂入", "firstName": "寿紀", "team": "千葉商科大学", "playerId": null, "tempId": "寿紀_坂入_千葉商科大学" }] },
-        { "id": 18, "name": "髙田・松本（早稲田大学）", "information": [{ "lastName": "髙田", "firstName": "淳貴", "team": "早稲田大学", "playerId": null, "tempId": "淳貴_髙田_早稲田大学" }, { "lastName": "松本", "firstName": "翔太", "team": "早稲田大学", "playerId": null, "tempId": "翔太_松本_早稲田大学" }] },
-        { "id": "bye", "name": "1回戦免除", "information": [] }
-      ]
+[
+{"id":19,"name":"長野・金澤（中央大学）","information":[{"lastName":"長野","firstName":"瑛寿","team":"中央大学","playerId":null,"tempId":"瑛寿_長野_中央大学"},{"lastName":"金澤","firstName":"慧","team":"中央大学","playerId":null,"tempId":"慧_金澤_中央大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":20,"name":"佐々木・那須（東京経済大学）","information":[{"lastName":"佐々木","firstName":"禅斗","team":"東京経済大学","playerId":null,"tempId":"禅斗_佐々木_東京経済大学"},{"lastName":"那須","firstName":"瑛太","team":"東京経済大学","playerId":null,"tempId":"瑛太_那須_東京経済大学"}]},
+{"id":21,"name":"中村・金﨑（隆之介）","information":[{"lastName":"中村","firstName":"陽","team":"隆之介","playerId":null,"tempId":"陽_中村_隆之介"},{"lastName":"金﨑","firstName":"隆之介","team":"隆之介","playerId":null,"tempId":"隆之介_金﨑_隆之介"}]},
+{"id":22,"name":"高松・近藤（城西大学）","information":[{"lastName":"高松","firstName":"直","team":"城西大学","playerId":null,"tempId":"直_高松_城西大学"},{"lastName":"近藤","firstName":"奏太","team":"城西大学","playerId":null,"tempId":"奏太_近藤_城西大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":23,"name":"團野・早川（立教大学）","information":[{"lastName":"團野","firstName":"佑紀","team":"立教大学","playerId":null,"tempId":"佑紀_團野_立教大学"},{"lastName":"早川","firstName":"悠佑","team":"立教大学","playerId":null,"tempId":"悠佑_早川_立教大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":24,"name":"稲見・高坂（日本体育大学）","information":[{"lastName":"稲見","firstName":"虎佑","team":"日本体育大学","playerId":"inami-koyu","tempId":"inami-koyu"},{"lastName":"高坂","firstName":"侑希","team":"日本体育大学","playerId":"takasaka-yuki","tempId":"takasaka-yuki"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":25,"name":"平岩・渡（早稲田大学）","information":[{"lastName":"平岩","firstName":"稜将","team":"早稲田大学","playerId":null,"tempId":"稜将_平岩_早稲田大学"},{"lastName":"渡","firstName":"健博","team":"早稲田大学","playerId":null,"tempId":"健博_渡_早稲田大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":26,"name":"伊達崎・日高（千葉商科大学）","information":[{"lastName":"伊達崎","firstName":"洸毅","team":"千葉商科大学","playerId":null,"tempId":"洸毅_伊達崎_千葉商科大学"},{"lastName":"日高","firstName":"大成","team":"千葉商科大学","playerId":null,"tempId":"大成_日高_千葉商科大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":27,"name":"鬼塚・板橋（東洋大学）","information":[{"lastName":"鬼塚","firstName":"一成","team":"東洋大学","playerId":null,"tempId":"一成_鬼塚_東洋大学"},{"lastName":"板橋","firstName":"慧星","team":"東洋大学","playerId":null,"tempId":"慧星_板橋_東洋大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":28,"name":"伊関・福島（日本体育大学）","information":[{"lastName":"伊関","firstName":"悠","team":"日本体育大学","playerId":"iseki-yu","tempId":"悠_伊関_日本体育大学"},{"lastName":"福島","firstName":"涼","team":"日本体育大学","playerId":"fukushima-ryo","tempId":"涼_福島_日本体育大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":29,"name":"岩田・真下（帝京大学）","information":[{"lastName":"岩田","firstName":"蒼科","team":"帝京大学","playerId":null,"tempId":"蒼科_岩田_帝京大学"},{"lastName":"真下","firstName":"朔稲","team":"帝京大学","playerId":null,"tempId":"朔稲_真下_帝京大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":30,"name":"榎・毛利（日本大学）","information":[{"lastName":"榎","firstName":"祐希人","team":"日本大学","playerId":null,"tempId":"祐希人_榎_日本大学"},{"lastName":"毛利","firstName":"快生","team":"日本大学","playerId":null,"tempId":"快生_毛利_日本大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":31,"name":"米川・中原（明治大学）","information":[{"lastName":"米川","firstName":"雅翔","team":"明治大学","playerId":null,"tempId":"雅翔_米川_明治大学"},{"lastName":"中原","firstName":"壮琉","team":"明治大学","playerId":null,"tempId":"壮琉_中原_明治大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":32,"name":"久住・松元（法政大学）","information":[{"lastName":"久住","firstName":"颯希","team":"法政大学","playerId":null,"tempId":"颯希_久住_法政大学"},{"lastName":"松元","firstName":"海翔","team":"法政大学","playerId":null,"tempId":"海翔_松元_法政大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":33,"name":"小川・巴（立正大学）","information":[{"lastName":"小川","firstName":"哲平","team":"立正大学","playerId":null,"tempId":"哲平_小川_立正大学"},{"lastName":"巴","firstName":"亮太","team":"立正大学","playerId":null,"tempId":"亮太_巴_立正大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":34,"name":"石田・栗木（専修大学）","information":[{"lastName":"石田","firstName":"恭介","team":"専修大学","playerId":null,"tempId":"恭介_石田_専修大学"},{"lastName":"栗木","firstName":"志優","team":"専修大学","playerId":null,"tempId":"志優_栗木_専修大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":35,"name":"大和・金井（國學院大學）","information":[{"lastName":"大和","firstName":"昌生","team":"國學院大學","playerId":null,"tempId":"昌生_大和_國學院大學"},{"lastName":"金井","firstName":"亮太","team":"國學院大學","playerId":null,"tempId":"亮太_金井_國學院大學"}]},
+{"id":"bye","name":"1回戦免除","information":[]}
+]
 
       ;
     // [
-    // {"id":1,"name":"片岡・黒坂（日本体育大学）","information":[{"lastName":"片岡","firstName":"暁紀","team":"日本体育大学","playerId":"kataoka-aki","tempId":"kataoka-aki"},{"lastName":"黒坂","firstName":"卓矢","team":"日本体育大学","playerId":"kurosaka-takuya","tempId":"kurosaka-takuya"}]},
     // {"id":18,"name":"髙田・松本（早稲田大学）","information":[{"lastName":"髙田","firstName":"淳貴","team":"早稲田大学","playerId":null,"tempId":"淳貴_髙田_早稲田大学"},{"lastName":"松本","firstName":"翔太","team":"早稲田大学","playerId":null,"tempId":"翔太_松本_早稲田大学"}]}
+    // {"id":35,"name":"大和・金井（國學院大學）","information":[{"lastName":"大和","firstName":"昌生","team":"國學院大學","playerId":null,"tempId":"昌生_大和_國學院大學"},{"lastName":"金井","firstName":"亮太","team":"國學院大學","playerId":null,"tempId":"亮太_金井_國學院大學"}]},
     // ]
 
     let roundMatches = Array.from({ length: initialPlayers.length / 2 }, (_, i) => ({
