feat: Add match input helper tool for generating player pair JSON
- Introduced a new HTML interface for adding player information and generating JSON output.
- Implemented JavaScript functionality to handle player input, including auto-fill from a predefined player list.
- Added CSS styles for better layout and usability of the input tool.
- Updated tournament.html with new player entries and removed deprecated ones.
- Included a teamData.js file containing player data for auto-fill functionality.

--- a/tools/tournament.html
+++ b/tools/tournament.html
@@ -125,45 +125,77 @@
     // プレイヤー情報（ペア名 + 各プレイヤーID）
     const initialPlayers =
 [
-{"id":19,"name":"長野・金澤（中央大学）","information":[{"lastName":"長野","firstName":"瑛寿","team":"中央大学","playerId":null,"tempId":"瑛寿_長野_中央大学"},{"lastName":"金澤","firstName":"慧","team":"中央大学","playerId":null,"tempId":"慧_金澤_中央大学"}]},
+{"id":36,"name":"中村・岡田（明治大学）","information":[{"lastName":"中村","firstName":"悠峰","team":"明治大学","playerId":null,"tempId":"悠峰_中村_明治大学"},{"lastName":"岡田","firstName":"侑也","team":"明治大学","playerId":null,"tempId":"侑也_岡田_明治大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":20,"name":"佐々木・那須（東京経済大学）","information":[{"lastName":"佐々木","firstName":"禅斗","team":"東京経済大学","playerId":null,"tempId":"禅斗_佐々木_東京経済大学"},{"lastName":"那須","firstName":"瑛太","team":"東京経済大学","playerId":null,"tempId":"瑛太_那須_東京経済大学"}]},
-{"id":21,"name":"中村・金﨑（隆之介）","information":[{"lastName":"中村","firstName":"陽","team":"隆之介","playerId":null,"tempId":"陽_中村_隆之介"},{"lastName":"金﨑","firstName":"隆之介","team":"隆之介","playerId":null,"tempId":"隆之介_金﨑_隆之介"}]},
-{"id":22,"name":"高松・近藤（城西大学）","information":[{"lastName":"高松","firstName":"直","team":"城西大学","playerId":null,"tempId":"直_高松_城西大学"},{"lastName":"近藤","firstName":"奏太","team":"城西大学","playerId":null,"tempId":"奏太_近藤_城西大学"}]},
+{"id":37,"name":"山岡・黒田（國學院大學）","information":[{"lastName":"山岡","firstName":"昂太郎","team":"國學院大學","playerId":null,"tempId":"昂太郎_山岡_國學院大學"},{"lastName":"黒田","firstName":"将希","team":"國學院大學","playerId":null,"tempId":"将希_黒田_國學院大學"}]},
+{"id":38,"name":"望月・間宮（中央大学）","information":[{"lastName":"望月","firstName":"優吾","team":"中央大学","playerId":null,"tempId":"優吾_望月_中央大学"},{"lastName":"間宮","firstName":"青波","team":"中央大学","playerId":null,"tempId":"青波_間宮_中央大学"}]},
+{"id":39,"name":"中田・丸井（創価大学）","information":[{"lastName":"中田","firstName":"颯太","team":"創価大学","playerId":null,"tempId":"颯太_中田_創価大学"},{"lastName":"丸井","firstName":"幸之介","team":"創価大学","playerId":null,"tempId":"幸之介_丸井_創価大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":23,"name":"團野・早川（立教大学）","information":[{"lastName":"團野","firstName":"佑紀","team":"立教大学","playerId":null,"tempId":"佑紀_團野_立教大学"},{"lastName":"早川","firstName":"悠佑","team":"立教大学","playerId":null,"tempId":"悠佑_早川_立教大学"}]},
+{"id":40,"name":"水島・戸田（千葉商科大学）","information":[{"lastName":"水島","firstName":"虎樹","team":"千葉商科大学","playerId":null,"tempId":"虎樹_水島_千葉商科大学"},{"lastName":"戸田","firstName":"翔大","team":"千葉商科大学","playerId":null,"tempId":"翔大_戸田_千葉商科大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":24,"name":"稲見・高坂（日本体育大学）","information":[{"lastName":"稲見","firstName":"虎佑","team":"日本体育大学","playerId":"inami-koyu","tempId":"inami-koyu"},{"lastName":"高坂","firstName":"侑希","team":"日本体育大学","playerId":"takasaka-yuki","tempId":"takasaka-yuki"}]},
+{"id":41,"name":"萩原・後関（専修大学）","information":[{"lastName":"萩原","firstName":"陽介","team":"専修大学","playerId":null,"tempId":"陽介_萩原_専修大学"},{"lastName":"後関","firstName":"晴登","team":"専修大学","playerId":null,"tempId":"晴登_後関_専修大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":25,"name":"平岩・渡（早稲田大学）","information":[{"lastName":"平岩","firstName":"稜将","team":"早稲田大学","playerId":null,"tempId":"稜将_平岩_早稲田大学"},{"lastName":"渡","firstName":"健博","team":"早稲田大学","playerId":null,"tempId":"健博_渡_早稲田大学"}]},
+{"id":42,"name":"千葉・若林（立正大学）","information":[{"lastName":"千葉","firstName":"康平","team":"立正大学","playerId":null,"tempId":"康平_千葉_立正大学"},{"lastName":"若林","firstName":"綾夏","team":"立正大学","playerId":null,"tempId":"綾夏_若林_立正大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":26,"name":"伊達崎・日高（千葉商科大学）","information":[{"lastName":"伊達崎","firstName":"洸毅","team":"千葉商科大学","playerId":null,"tempId":"洸毅_伊達崎_千葉商科大学"},{"lastName":"日高","firstName":"大成","team":"千葉商科大学","playerId":null,"tempId":"大成_日高_千葉商科大学"}]},
+{"id":43,"name":"山崎・保利（東海大学）","information":[{"lastName":"山崎","firstName":"周真","team":"東海大学","playerId":null,"tempId":"周真_山崎_東海大学"},{"lastName":"保利","firstName":"彰大","team":"東海大学","playerId":null,"tempId":"彰大_保利_東海大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":27,"name":"鬼塚・板橋（東洋大学）","information":[{"lastName":"鬼塚","firstName":"一成","team":"東洋大学","playerId":null,"tempId":"一成_鬼塚_東洋大学"},{"lastName":"板橋","firstName":"慧星","team":"東洋大学","playerId":null,"tempId":"慧星_板橋_東洋大学"}]},
+{"id":44,"name":"林・稲丸（日本体育大学）","information":[{"lastName":"林","firstName":"星汰","team":"日本体育大学","playerId":"hayashi-seita","tempId":"星汰_林_日本体育大学"},{"lastName":"稲丸","firstName":"獅道","team":"日本体育大学","playerId":"inamaru-shido","tempId":"獅道_稲丸_日本体育大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":28,"name":"伊関・福島（日本体育大学）","information":[{"lastName":"伊関","firstName":"悠","team":"日本体育大学","playerId":"iseki-yu","tempId":"悠_伊関_日本体育大学"},{"lastName":"福島","firstName":"涼","team":"日本体育大学","playerId":"fukushima-ryo","tempId":"涼_福島_日本体育大学"}]},
+{"id":45,"name":"相澤・渡邉（帝京大学）","information":[{"lastName":"相澤","firstName":"波月","team":"帝京大学","playerId":null,"tempId":"波月_相澤_帝京大学"},{"lastName":"渡邉","firstName":"柊羽","team":"帝京大学","playerId":null,"tempId":"柊羽_渡邉_帝京大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":29,"name":"岩田・真下（帝京大学）","information":[{"lastName":"岩田","firstName":"蒼科","team":"帝京大学","playerId":null,"tempId":"蒼科_岩田_帝京大学"},{"lastName":"真下","firstName":"朔稲","team":"帝京大学","playerId":null,"tempId":"朔稲_真下_帝京大学"}]},
+{"id":46,"name":"田嶋・古谷（駿河台大学）","information":[{"lastName":"田嶋","firstName":"陸玖","team":"駿河台大学","playerId":null,"tempId":"陸玖_田嶋_駿河台大学"},{"lastName":"古谷","firstName":"一志","team":"駿河台大学","playerId":null,"tempId":"一志_古谷_駿河台大学"}]},
+{"id":47,"name":"百澤・原田（東京経済大学）","information":[{"lastName":"百澤","firstName":"堅亮","team":"東京経済大学","playerId":null,"tempId":"堅亮_百澤_東京経済大学"},{"lastName":"原田","firstName":"隼輔","team":"東京経済大学","playerId":null,"tempId":"隼輔_原田_東京経済大学"}]},
+{"id":48,"name":"高橋・原田（法政大学）","information":[{"lastName":"高橋","firstName":"輝","team":"法政大学","playerId":null,"tempId":"輝_高橋_法政大学"},{"lastName":"原田","firstName":"滉太","team":"法政大学","playerId":null,"tempId":"滉太_原田_法政大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":30,"name":"榎・毛利（日本大学）","information":[{"lastName":"榎","firstName":"祐希人","team":"日本大学","playerId":null,"tempId":"祐希人_榎_日本大学"},{"lastName":"毛利","firstName":"快生","team":"日本大学","playerId":null,"tempId":"快生_毛利_日本大学"}]},
+{"id":49,"name":"大家・鳥竹（東海大学）","information":[{"lastName":"大家","firstName":"健慎","team":"東海大学","playerId":null,"tempId":"健慎_大家_東海大学"},{"lastName":"鳥竹","firstName":"柊生","team":"東海大学","playerId":null,"tempId":"柊生_鳥竹_東海大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":31,"name":"米川・中原（明治大学）","information":[{"lastName":"米川","firstName":"雅翔","team":"明治大学","playerId":null,"tempId":"雅翔_米川_明治大学"},{"lastName":"中原","firstName":"壮琉","team":"明治大学","playerId":null,"tempId":"壮琉_中原_明治大学"}]},
+{"id":50,"name":"二瓶・増子（東洋大学）","information":[{"lastName":"二瓶","firstName":"碧音","team":"東洋大学","playerId":null,"tempId":"碧音_二瓶_東洋大学"},{"lastName":"増子","firstName":"朝飛","team":"東洋大学","playerId":null,"tempId":"朝飛_増子_東洋大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":32,"name":"久住・松元（法政大学）","information":[{"lastName":"久住","firstName":"颯希","team":"法政大学","playerId":null,"tempId":"颯希_久住_法政大学"},{"lastName":"松元","firstName":"海翔","team":"法政大学","playerId":null,"tempId":"海翔_松元_法政大学"}]},
+{"id":51,"name":"淺倉・池田（国士舘大学）","information":[{"lastName":"淺倉","firstName":"岳","team":"国士舘大学","playerId":null,"tempId":"岳_淺倉_国士舘大学"},{"lastName":"池田","firstName":"功佑","team":"国士舘大学","playerId":null,"tempId":"功佑_池田_国士舘大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":33,"name":"小川・巴（立正大学）","information":[{"lastName":"小川","firstName":"哲平","team":"立正大学","playerId":null,"tempId":"哲平_小川_立正大学"},{"lastName":"巴","firstName":"亮太","team":"立正大学","playerId":null,"tempId":"亮太_巴_立正大学"}]},
+{"id":52,"name":"菅原・小林（慶應義塾大学）","information":[{"lastName":"菅原","firstName":"悠生","team":"慶應義塾大学","playerId":null,"tempId":"悠生_菅原_慶應義塾大学"},{"lastName":"小林","firstName":"武蔵","team":"慶應義塾大学","playerId":null,"tempId":"武蔵_小林_慶應義塾大学"}]},
+{"id":53,"name":"古山・野々村（城西大学）","information":[{"lastName":"古山","firstName":"瑛仁","team":"城西大学","playerId":null,"tempId":"瑛仁_古山_城西大学"},{"lastName":"野々村","firstName":"羚凰","team":"城西大学","playerId":null,"tempId":"羚凰_野々村_城西大学"}]},
+{"id":54,"name":"奥田・豊田（立教大学）","information":[{"lastName":"奥田","firstName":"叶汰","team":"立教大学","playerId":null,"tempId":"叶汰_奥田_立教大学"},{"lastName":"豊田","firstName":"祐冴","team":"立教大学","playerId":null,"tempId":"祐冴_豊田_立教大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":34,"name":"石田・栗木（専修大学）","information":[{"lastName":"石田","firstName":"恭介","team":"専修大学","playerId":null,"tempId":"恭介_石田_専修大学"},{"lastName":"栗木","firstName":"志優","team":"専修大学","playerId":null,"tempId":"志優_栗木_専修大学"}]},
+
 {"id":"bye","name":"1回戦免除","information":[]},
-{"id":35,"name":"大和・金井（國學院大學）","information":[{"lastName":"大和","firstName":"昌生","team":"國學院大學","playerId":null,"tempId":"昌生_大和_國學院大學"},{"lastName":"金井","firstName":"亮太","team":"國學院大學","playerId":null,"tempId":"亮太_金井_國學院大學"}]},
+{"id":56,"name":"高須賀・杉山（早稲田大学）","information":[{"lastName":"高須賀","firstName":"祥也","team":"早稲田大学","playerId":null,"tempId":"祥也_高須賀_早稲田大学"},{"lastName":"杉山","firstName":"賢太","team":"早稲田大学","playerId":null,"tempId":"賢太_杉山_早稲田大学"}]},
+{"id":57,"name":"酒井・奥山（東洋大学）","information":[{"lastName":"酒井","firstName":"蒼空","team":"東洋大学","playerId":null,"tempId":"蒼空_酒井_東洋大学"},{"lastName":"奥山","firstName":"海征","team":"東洋大学","playerId":null,"tempId":"海征_奥山_東洋大学"}]},
+{"id":58,"name":"吉野・渡邉（駿河台大学）","information":[{"lastName":"吉野","firstName":"志洸","team":"駿河台大学","playerId":null,"tempId":"志洸_吉野_駿河台大学"},{"lastName":"渡邉","firstName":"そら","team":"駿河台大学","playerId":null,"tempId":"そら_渡邉_駿河台大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":59,"name":"菊池・金山（城西大学）","information":[{"lastName":"菊池","firstName":"愛叶","team":"城西大学","playerId":null,"tempId":"愛叶_菊池_城西大学"},{"lastName":"金山","firstName":"翔太","team":"城西大学","playerId":null,"tempId":"翔太_金山_城西大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":60,"name":"野中・若林（中央大学）","information":[{"lastName":"野中","firstName":"翔太","team":"中央大学","playerId":null,"tempId":"翔太_野中_中央大学"},{"lastName":"若林","firstName":"宝来","team":"中央大学","playerId":null,"tempId":"宝来_若林_中央大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":61,"name":"沼田・藤田（東海大学）","information":[{"lastName":"沼田","firstName":"青緯","team":"東海大学","playerId":null,"tempId":"青緯_沼田_東海大学"},{"lastName":"藤田","firstName":"颯汰","team":"東海大学","playerId":null,"tempId":"颯汰_藤田_東海大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":62,"name":"岡本・岡田（日本体育大学）","information":[{"lastName":"岡本","firstName":"颯舞","team":"日本体育大学","playerId":"okamoto-souma","tempId":"颯舞_岡本_日本体育大学"},{"lastName":"岡田","firstName":"弥真斗","team":"日本体育大学","playerId":"okada-masato","tempId":"弥真斗_岡田_日本体育大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":63,"name":"渡邉・松田（東京経済大学）","information":[{"lastName":"渡邉","firstName":"優心","team":"東京経済大学","playerId":null,"tempId":"優心_渡邉_東京経済大学"},{"lastName":"松田","firstName":"知大","team":"東京経済大学","playerId":null,"tempId":"知大_松田_東京経済大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":64,"name":"間庭・佐藤（明治大学）","information":[{"lastName":"間庭","firstName":"賢人","team":"明治大学","playerId":null,"tempId":"賢人_間庭_明治大学"},{"lastName":"佐藤","firstName":"亜結夢","team":"明治大学","playerId":null,"tempId":"亜結夢_佐藤_明治大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":65,"name":"根津・高木（東海大学）","information":[{"lastName":"根津","firstName":"煌大","team":"東海大学","playerId":null,"tempId":"煌大_根津_東海大学"},{"lastName":"高木","firstName":"琉惺","team":"東海大学","playerId":null,"tempId":"琉惺_高木_東海大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":66,"name":"金子・木村（専修大学）","information":[{"lastName":"金子","firstName":"流音","team":"専修大学","playerId":null,"tempId":"流音_金子_専修大学"},{"lastName":"木村","firstName":"春陽","team":"専修大学","playerId":null,"tempId":"春陽_木村_専修大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":67,"name":"南・五味（立教大学）","information":[{"lastName":"南","firstName":"亮斗","team":"立教大学","playerId":null,"tempId":"亮斗_南_立教大学"},{"lastName":"五味","firstName":"知晃","team":"立教大学","playerId":null,"tempId":"知晃_五味_立教大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":68,"name":"中込・成田（流通経済大学）","information":[{"lastName":"中込","firstName":"琉星","team":"流通経済大学","playerId":null,"tempId":"琉星_中込_流通経済大学"},{"lastName":"成田","firstName":"和広","team":"流通経済大学","playerId":null,"tempId":"和広_成田_流通経済大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":69,"name":"岡田・永澤（東洋大学）","information":[{"lastName":"岡田","firstName":"楓真","team":"東洋大学","playerId":null,"tempId":"楓真_岡田_東洋大学"},{"lastName":"永澤","firstName":"志輝","team":"東洋大学","playerId":null,"tempId":"志輝_永澤_東洋大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":70,"name":"渡辺・松田（日本体育大学）","information":[{"lastName":"渡辺","firstName":"康介","team":"日本体育大学","playerId":"watanabe-kousuke","tempId":"康介_渡辺_日本体育大学"},{"lastName":"松田","firstName":"義明","team":"日本体育大学","playerId":"matsuda-yoshiaki","tempId":"義明_松田_日本体育大学"}]},
+{"id":"bye","name":"1回戦免除","information":[]},
+{"id":71,"name":"森川・野本（法政大学）","information":[{"lastName":"森川","firstName":"亮介","team":"法政大学","playerId":null,"tempId":"亮介_森川_法政大学"},{"lastName":"野本","firstName":"凌生","team":"法政大学","playerId":null,"tempId":"凌生_野本_法政大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]}
 ]
-
-      ;
     // [
-    // {"id":18,"name":"髙田・松本（早稲田大学）","information":[{"lastName":"髙田","firstName":"淳貴","team":"早稲田大学","playerId":null,"tempId":"淳貴_髙田_早稲田大学"},{"lastName":"松本","firstName":"翔太","team":"早稲田大学","playerId":null,"tempId":"翔太_松本_早稲田大学"}]}
-    // {"id":35,"name":"大和・金井（國學院大學）","information":[{"lastName":"大和","firstName":"昌生","team":"國學院大學","playerId":null,"tempId":"昌生_大和_國學院大學"},{"lastName":"金井","firstName":"亮太","team":"國學院大學","playerId":null,"tempId":"亮太_金井_國學院大學"}]},
+    // {"id":18,"name":"髙田・松本（早稲田大学）","information":[{"lastName":"髙田","firstName":"淳貴","team":"早稲田大学","playerId":null,"tempId":"淳貴_髙田_早稲田大学"},{"lastName":"松本","firstName":"翔太","team":"早稲田大学","playerId":null,"tempId":"翔太_松本_早稲田大学"}]},
+    // {"id":55,"name":"小池・村田（慶應義塾大学）","information":[{"lastName":"小池","firstName":"賀久","team":"慶應義塾大学","playerId":null,"tempId":"賀久_小池_慶應義塾大学"},{"lastName":"村田","firstName":"雅常","team":"慶應義塾大学","playerId":null,"tempId":"雅常_村田_慶應義塾大学"}]},
     // ]
+      ;
+
 
     let roundMatches = Array.from({ length: initialPlayers.length / 2 }, (_, i) => ({
       p1: initialPlayers[i * 2],
