Add tournament management tools and features
- Implemented a new HTML structure for tournament management with round settings and match displays.
- Added functionality to handle "bye" matches, allowing automatic winner determination for matches with a player receiving a bye.
- Introduced a checkbox to include "bye" players in the JSON output.
- Enhanced the player data with additional entries for tournament participants.
- Created a CSS file for styling the tournament management interface.
- Updated JavaScript logic to manage match scores, winners, and JSON output formatting.

--- a/tools/match-input-helper/index.html
+++ b/tools/match-input-helper/index.html
@@ -10,9 +10,10 @@
 <body>
 
     <h2>選手ペアJSON生成ツール</h2>
-
     <div id="playersContainer"></div>
-
+    <label>
+        <input type="checkbox" id="byeCheckbox" />一回戦免除を同時に追加する
+    </label>
     <button id="addPlayerBtn">選手を追加</button>
 
     <hr />
