--- a/tools/tournament.html
+++ b/tools/tournament.html
@@ -157,7 +157,7 @@
 {"id":53,"name":"古山・野々村（城西大学）","information":[{"lastName":"古山","firstName":"瑛仁","team":"城西大学","playerId":null,"tempId":"瑛仁_古山_城西大学"},{"lastName":"野々村","firstName":"羚凰","team":"城西大学","playerId":null,"tempId":"羚凰_野々村_城西大学"}]},
 {"id":54,"name":"奥田・豊田（立教大学）","information":[{"lastName":"奥田","firstName":"叶汰","team":"立教大学","playerId":null,"tempId":"叶汰_奥田_立教大学"},{"lastName":"豊田","firstName":"祐冴","team":"立教大学","playerId":null,"tempId":"祐冴_豊田_立教大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
-
+{"id":55,"name":"小池・村田（慶應義塾大学）","information":[{"lastName":"小池","firstName":"賀久","team":"慶應義塾大学","playerId":null,"tempId":"賀久_小池_慶應義塾大学"},{"lastName":"村田","firstName":"雅常","team":"慶應義塾大学","playerId":null,"tempId":"雅常_村田_慶應義塾大学"}]},
 {"id":"bye","name":"1回戦免除","information":[]},
 {"id":56,"name":"高須賀・杉山（早稲田大学）","information":[{"lastName":"高須賀","firstName":"祥也","team":"早稲田大学","playerId":null,"tempId":"祥也_高須賀_早稲田大学"},{"lastName":"杉山","firstName":"賢太","team":"早稲田大学","playerId":null,"tempId":"賢太_杉山_早稲田大学"}]},
 {"id":57,"name":"酒井・奥山（東洋大学）","information":[{"lastName":"酒井","firstName":"蒼空","team":"東洋大学","playerId":null,"tempId":"蒼空_酒井_東洋大学"},{"lastName":"奥山","firstName":"海征","team":"東洋大学","playerId":null,"tempId":"海征_奥山_東洋大学"}]},
