fix: Add output ID input field and update player input group functionality

--- a/tools/match-input-helper/index.html
+++ b/tools/match-input-helper/index.html
@@ -10,7 +10,12 @@
 <body>
 
     <h2>選手ペアJSON生成ツール</h2>
+    <div>
+        <label>出力ID（共通）：<input type="number" id="outputIdInput" min="1" value="1" /></label>
+    </div>
+
     <div id="playersContainer"></div>
+
     <label>
         <input type="checkbox" id="byeCheckbox" />一回戦免除を同時に追加する
     </label>
