Enhance player input handling and add new player data
- Improved player input group creation with automatic name splitting for last and first names.
- Added a new player "朝倉嵩貴" to the team data.
- Updated the JSON output textarea to allow editing.
- Refactored initial player data to include additional players and ensure proper formatting.
- Introduced a new script for converting names to romaji using the pykakasi library.

--- a/tools/tournament/index.html
+++ b/tools/tournament/index.html
@@ -27,7 +27,7 @@
     <button id="nextRoundBtn">次のラウンドへ</button>
 
     <h2>最終JSON出力</h2>
-    <textarea id="jsonOutput" readonly style="height: 800px;"></textarea>
+    <textarea id="jsonOutput" style="height: 800px;"></textarea>
 
     <script src="initialPlayer.js"></script>
     <script>
@@ -243,6 +243,7 @@
                 alert("すべての試合の勝者を決めてください。");
                 return;
             }
+            window.scrollTo({ top: 0, behavior: 'smooth' });
 
             // 現ラウンドを履歴に保存
             roundHistory.push({
