Refactor code structure for improved readability and maintainability

--- a/tools/tournament/index.html
+++ b/tools/tournament/index.html
@@ -34,7 +34,7 @@
         // 初期スコア
         const initScore = 4;
         const initScore1 = initScore;
-        const initScore2 = 3;
+        const initScore2 = initScore;
 
         // パッキン用ダミーペア
         const byePlayer = { id: "bye", name: "1回戦免除", information: [] };
